AuthMicroservice/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: authmicroservice
spec:
  containers:
  - name: authmicroservice
    image: authmicroservice:latest
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
